fix view on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -22,14 +22,11 @@ html {
   background-color: black;
   color: white;
   font-family: 'Palatino Linotype', sans-serif;
+  width: 100%;
 }
 
 #root {
   margin-bottom: 30px;
-}
-
-.select-class-section {
-  width: fit-content;
 }
 
 label.enhancement {
